Fix topics scroll on Firefox

--- a/web/public/style.css
+++ b/web/public/style.css
@@ -371,6 +371,11 @@ span.page {
     max-height: 50%;
     overflow-y: scroll;
 }
+@-moz-document url-prefix() {
+    #all-posts {
+        height: 50%;
+    }
+}
 .topics-table tr td:nth-child(1) {
     max-width: 400px;
 }
